[terraform, opentofu] IJPL-175606 Reimplemented executable detection UX
GitOrigin-RevId: 728b0938657e374540669b909486f75925fe4334